--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,12 @@
 
         </activity>
 
+        <activity android:name=".qrcode.FinishActivity"
+            android:exported="false"
+            android:theme="@style/Theme.QRCodeScanner">
+
+        </activity>
+
     </application>
 
 </manifest>
